--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve --open",
+    "ng": "ng",     
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod",
+    "start": "node Server.js"
   },
   "private": true,
   "dependencies": {
@@ -26,7 +27,8 @@
     "ng-zorro-antd": "^0.5.0",
     "rxjs": "^5.4.1",
     "tinymce": "^4.7.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "@angular/cli": "1.2.6"
   },
   "devDependencies": {
     "@angular/cli": "1.2.6",
